base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webserver
spec:
  host: '' 
  to:
    kind: Service
    name: webserver
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
